--- a/web/vistas-documentos/ver-anteproyecto.xhtml
+++ b/web/vistas-documentos/ver-anteproyecto.xhtml
@@ -26,8 +26,12 @@
                 </p:dialog>
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Inicio" outcome="ver-anteproyecto" />
-                        <p:menuitem value="Ver Anteproyecto" />
+                        <p:menuitem value="inicio" />
+                        <p:menuitem value="#{menuController.rolActual}" />
+                        <p:menuitem value="Trabajos de Grado" />
+                        <p:menuitem value="Fases del Trabajo de Grado" />
+                        <p:menuitem value="2. Realizacion del Anteproyecto" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-realizacion-anteproyecto" />
+                        <p:menuitem value="Ver Anteproyecto" outcome="ver-anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
             </ui:define>
