--- a/web/vistas-documentos/ver-formato-revision-idea.xhtml
+++ b/web/vistas-documentos/ver-formato-revision-idea.xhtml
@@ -13,8 +13,12 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Inicio" outcome="ver-formato-revision-idea" />
-                        <p:menuitem value="Ver Revisión de la idea" />
+                        <p:menuitem value="inicio" />
+                        <p:menuitem value="#{menuController.rolActual}" />
+                        <p:menuitem value="Trabajos de Grado" />
+                        <p:menuitem value="Fases del Trabajo de Grado" />
+                        <p:menuitem value="1. Presentación de la Idea" outcome="/#{menuController.outcomeCarpetaPefil()}/fase-presentacion-de-la-idea" />
+                        <p:menuitem value="Ver Formato de Revision de la Idea" outcome="ver-formato-revision-idea" />
                     </p:breadCrumb>   
                 </h:form>
             </ui:define>
@@ -32,7 +36,7 @@
                         <h:outputText value="Formato: Revisión de la idea"/> <br/>
                     </div>
                     <p:spacer height="30"/>
-                    
+
                     <h:form enctype="multipart/form-data">   
                         <p:panel header="Información Actual" style="color: #181818;">
                             <br />
@@ -40,7 +44,7 @@
                                 <p:graphicImage value="../resources/img/logo-unicauca-negro.png" style="width: 96px; margin-right: 60px" />
                                 <p:column>
                                     <div align="center">
-                                         <p:outputLabel value="Universidad del Cauca" styleClass="subtitulosFormato" /><br />
+                                        <p:outputLabel value="Universidad del Cauca" styleClass="subtitulosFormato" /><br />
                                         <p:outputLabel value="Facultad de Ingeniería Electrónica y" styleClass="subtitulosFormato" /><br />
                                         <p:outputLabel value="Telecomunicaciones" styleClass="subtitulosFormato" />
                                     </div>
