--- a/web/perfiles/vista-estudiante.xhtml
+++ b/web/perfiles/vista-estudiante.xhtml
@@ -79,6 +79,9 @@
                 <p:panel styleClass="paneltrabajo" rendered="#{!estudianteViewController.estTieneTG(serviciosSimcaController.nombreUsuario)}">
                     <div class="tituloContenido">                        
                         Lo sentimos, aun no tiene un trabajo de grado asignado.
+                        <br /> <br /> <br />
+                        Modalidad de Trabajo de Grado: Trabajo de Investigación
+                        <ui:include src="./../procedimiento.xhtml"/> 
                     </div>
                 </p:panel>
                 <h:form id="frmDescargarFormatoA">
