--- a/web/estudiante/fase-6.xhtml
+++ b/web/estudiante/fase-6.xhtml
@@ -3,8 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
@@ -13,29 +12,28 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Inicio" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
-                        <p:menuitem value="Coordinador" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
-                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-2" />
-                        <p:menuitem value="2. Realización del Anteproyecto" />
+                        <p:menuitem value="Inicio" outcome="./../perfiles/vista-estudiante.xhtml" />
+                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />
+                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-estudiante.xhtml" /> 
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-6" />
+                        <p:menuitem value="6. Finalizado" />
                     </p:breadCrumb>
                 </h:form>
             </ui:define>
 
             <ui:define name="title">
-                
             </ui:define>
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-                
-                <h:form>                                                           
+                <h:form id="formularioavalar" >
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
                             #{trabajodegradoController.trabajo.trabajonombre}
                         </div>                                         
                         <p:growl id="growl" showDetail="true" life="5000"/>
                         <p:spacer height="25"/>
+
                         <p:panel id="fasesTrabajoGrado" header="Fases del Trabajo de Grado">
                             <h:panelGrid columns="6" cellpadding="1" style="margin: 0 auto;">
                                 <p:graphicImage value="../resources/img/1.png" style="width: 96px;" />
@@ -46,34 +44,18 @@
                                 <p:graphicImage value="../resources/img/6.png" style="width: 96px;" />                        
 
                                 <p:button value="Presentación de la Idea" outcome="fase-1" disabled="#{trabajodegradoController.fases.primeraFase}" style="width: 105px;height: 96px; font-size: 13px;" />                            
-
-                                <p:commandButton type="button" value="Realización del Anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" >
-                                    <p:effect type="highlight" event="click" for="pnlRealizacionAnteproyecto">
-                                        <f:param name="mode" value="'show'" />
-                                    </p:effect>
-                                </p:commandButton>
-
+                                <p:button value="Realización del Anteproyecto" outcome="fase-2" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Evaluación del Anteproyecto" outcome="fase-3" disabled="#{trabajodegradoController.fases.terceraFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Ejecución del Trabajo de Grado" outcome="fase-4" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                                 <p:button value="Evaluación del Trabajo de Grado" outcome="fase-5" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                                <p:button value="Finalizado" outcome="fase-6" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                            </h:panelGrid>
-                        </p:panel>      
-                        <p:spacer height="25"/>
-                        <p:panel id="pnlRealizacionAnteproyecto" header="2. Realización del Anteproyecto" style=" font-size: 14px;" widgetVar="pnlRealizacionAnteproyecto">
-                            <h:panelGrid columns="5" cellpadding="5" cellspacing="5">
-                                <h:outputText value="Anteproyecto:" style="font-weight: bold;" />                                                                
-                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-anteproyecto.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerAnteproyecto}" style="width: 120px;" />
-                                <p:commandButton id="btndesc" value="Descargar" rendered="#{anteproyecto.filedown != null}"
-                                                 ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
-                                                 icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
-                                    <p:fileDownload value="#{anteproyecto.filedown}" />
-                                </p:commandButton>
-                            </h:panelGrid>
+                                <p:button value="Finalizado" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px; background-color:greenyellow;" />
+                            </h:panelGrid>                        
                         </p:panel>
                     </p:panel>
                 </h:form>
             </ui:define>
+
         </ui:composition>
+
     </body>
 </html>
