--- a/web/perfiles/vista-jefe-de-departamento.xhtml
+++ b/web/perfiles/vista-jefe-de-departamento.xhtml
@@ -13,7 +13,7 @@
             <ui:define name="menuprincipal">
                 <h:form id="formMigaJefe">
                     <p:breadCrumb id="migaJefe" styleClass="migaDePan">
-                        <p:menuitem value="Director" outcome="vista-director.xhtml" />                                        
+                        <p:menuitem value="Director" outcome="vista-jefe-de-departamento" />                                        
                         <p:menuitem value="Jefe de Departamento" outcome="vista-jefe-de-departamento" />
                         <p:menuitem value="#{jefeDepController.titulotablaJefe}" outcome="vista-jefe-de-departamento" />
                     </p:breadCrumb>
