Añadiendo Vista de Procesos

--- a/web/perfiles/vista-jurado.xhtml
+++ b/web/perfiles/vista-jurado.xhtml
@@ -14,7 +14,7 @@
                 <h:form id="formMigaJurado">
                     <p:breadCrumb id="migaJurado" styleClass="migaDePan">
                         <p:menuitem value="Jurado" outcome="vista-jurado" />                                        
-                        <p:menuitem value="Jefe de Departamento" outcome="vista-jurado" />
+                        <p:menuitem value="Jurado" outcome="vista-jurado" />
                         <p:menuitem value="#{juradoController.titulotablaJurado}" />
                     </p:breadCrumb>
                 </h:form>
