Corrigiendo errores y haciendo requisito X

--- a/web/estudiante/fase-6.xhtml
+++ b/web/estudiante/fase-6.xhtml
@@ -25,6 +25,10 @@
             </ui:define>
 
             <ui:define name="body">
+                #{estudianteViewController.nombresApellidos(serviciosSimcaController.nombreUsuario)}
+                #{trabajodegradoController.trabajoAsignado(estudianteViewController.entityTrabajo.trabajoid)}
+                #{trabajodegradoController.incializar()}                
+                #{estudianteViewController.loadTrabajoDeGrado()}
                 #{menuController.setOutPerfiles(true)}
                 <h:form id="formularioavalar" >
                     <p:panel styleClass="paneltrabajo" >
